# rgou-cloudflare

./: .cursorignore  .gitignore  DEPLOYMENT.md  LICENSE  README.md  ai_benchmark_config.json  ai_benchmark_results.csv  debug_ml_weights.json  drizzle.config.local.ts  drizzle.config.ts  env.d.ts  eslint.config.mjs  evaluation_results.json  expectiminimax_vs_random.csv  ml_ai_weights.json  next.config.mjs  next.config.ts  open-next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  requirements.txt  run_benchmark.sh  test_game.json  test_ml_weights.json  test_ml_weights_optimized.json  test_rust_ai.py  test_state.json  training_data_cache.json  tsconfig.json  vitest.config.ts  worker.js  wrangler.toml
.cursor/rules/: robs-rules.mdc
.github/workflows/: deploy-ml.yml  deploy.yml
.vercel/output/: builds.json  config.json
docs/: AI-MATRIX-RESULTS.md  ARCHITECTURE.md  DEVELOPMENT.md  GAME-GUIDE.md  README.md  TODO.md  ai-architecture.md  ai-development-experiments.md  ai-development-history.md  ai-improvement-roadmap.md  ai-investigation-summary.md  ai-performance-quick-reference.md  ai-performance.md  ai-system.md  ai-testing-strategy.md  api-reference.md  architecture-overview.md  checking-training-status.md  cloudflare-worker-infrastructure.md  cloudflare-worker.md  comprehensive-ai-matrix-analysis.md  current-todos.md  deployment.md  depth-1-vs-depth-3-analysis.md  enhanced-evaluation-function.md  expectiminimax-ai-optimization.md  game-rules-strategy.md  game-statistics.md  genetic-algorithm-optimization-summary.md  genetic-algorithm-research.md  genetic-algorithm-system.md  genetic-vs-ml-comparison.md  heuristic-ai-analysis.md  high-priority-todos.md  icon.psd  latest-matrix-comparison-results.md  mac-optimization-guide.md  minimax-ai-specification.md  ml-ai-system.md  ml-system-overview.md  (+15 more)
e2e/: advanced.spec.ts  global-setup.ts  smoke.spec.ts
migrations/: 0000_greedy_storm.sql  0000_late_cardiac.sql  0000_legal_titania.sql  0001_misty_black_knight.sql  0002_add_game_type_and_ai_versions.sql  0003_remove_version_columns.sql  0004_update_game_type_enum.sql  0005_remove_status_and_ai_versions.sql
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
ml/: README.md  ml_experiments_log.csv  requirements.txt
ml/config/: training.json
ml/scripts/: Cargo.toml  add_ml_model_to_benchmark.py  build_rust_ai.sh  check_training_status.sh  convert_weights.py  evaluate_ml_ai.py  evaluate_ml_ai_simple.py  load-ml-weights.ts  load-weights.sh  load_pytorch_weights.py  plot_ai_benchmark.py  plot_expectiminimax_vs_random.py  select_best_ml_model.py  test_ml_vs_expectiminimax.sh  test_optimized_training.sh  train-pytorch.sh  train.py  train.sh  train_and_benchmark_ml_ai.sh  train_hybrid.py  train_ml_ai.py  train_ml_ai.sh  train_ml_ai_advanced.py  train_ml_ai_simple.py  train_ml_ai_version.py  train_ml_ai_version.sh  train_production.sh  train_pytorch.py
playwright-report/: index.html
public/: browserconfig.xml  manifest.json  ml-weights.json  sw.js
public/screenshots/: README.md
scripts/: check_training_status.sh  format-ai-matrix-md.cjs  generate-sw.js  load-ml-weights.ts  reset-local-db.ts  test-ai-comparison.sh  test-wasm-build.js  test_ml_vs_deterministic.sh  train-ml.sh  train_ml_ai.py  train_ml_ai.sh  train_ml_ai_fast.sh  train_ml_ai_optimized.sh  train_ml_ai_with_cache.sh  update-versions.js
src/app/: actions.ts  globals.css  layout.tsx  page.tsx
src/components/: AIDiagnosticsPanel.tsx  AISelector.tsx  AnimatedBackground.tsx  GameBoard.tsx  GameControls.tsx  GameStoreExposer.tsx  HowToPlayPanel.tsx  ModeSelectionCard.tsx  NetworkStatus.tsx  PWAInstallPrompt.tsx  RoyalGameOfUr.tsx  Turnstile.tsx
src/lib/: actions.ts  ai-service.ts  ai-types.ts  ai.worker.ts  diagnostics.ts  game-logic.ts  game-store.ts  ml-ai-service.ts  (+9 more)
test-results/: .last-run.json
tests/: README.md  game-functionality.spec.ts  game-ui.spec.ts  performance.spec.ts
worker/: .gitignore  Cargo.toml  build.zig  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/.zig-cache/o/2acae4180d29b29a6f4c5407f39b312b/: ai.wasm
worker/.zig-cache/o/5f3703e425fc346c6e4a44e0040449b7/: ai.wasm
worker/.zig-cache/o/bbe55fc92d0df5fca99e5c6d5db7b890/: ai.wasm
worker/.zig-cache/o/e13559c8d452e5a9ddafa60198d32b23/: ai.wasm
worker/ml_ai_core/: Cargo.toml
worker/ml_ai_core/src/: features.rs  lib.rs  neural_network.rs  training.rs  wasm_api.rs
worker/rust_ai_core/: AI_HISTORY.md  Cargo.toml  README.md  ai_benchmark_config.json  ai_benchmark_output.txt  ai_benchmark_results.csv  ai_dominance_results.json  ai_dominance_results.md  best_genetic_params.json  diagnostic_best_params.json  evolved_params.json  genetic_reoptimization_summary.md  hybrid_ai_params.json  ml_models.json  quick_training_best_params.json  quick_verification_params.json  super_evolved_params.json
worker/rust_ai_core/benches/: ai_simulation.rs
worker/rust_ai_core/examples/: ai_dominance_test.rs  debug_genetic.rs  enhanced_genetic_evolution.rs  eval_comparison.rs  evolution_comparison.rs  genetic_diagnostic.rs  genetic_evolution.rs  genetic_training.rs  quick_genetic_evolution.rs  quick_model_comparison.rs  quick_training.rs  test_best_params.rs
worker/rust_ai_core/src/: dice.rs  features.rs  genetic_ai.rs  genetic_params.rs  lib.rs  main.rs  ml_ai.rs  neural_network.rs  training.rs  wasm_api.rs
worker/rust_ai_core/tests/: README.md  ai_matrix_analysis.rs  ai_matrix_analysis_fixed.rs  ai_matrix_test.rs  ai_performance_tests.rs  ai_simulation.rs  coordinated_ai_test.rs  depth2_vs_depth3_analysis.rs  depth_analysis.rs  dice_distribution_test.rs  emm_debug_detailed.rs  emm_debug_test.rs  enhanced_evaluation_test.rs  expectiminimax_diagnostic.rs  genetic_params_comparison.rs  heuristic_ai_test.rs  heuristic_vs_depth0_test.rs  ml_diagnostic.rs  ml_vs_deterministic.rs  ml_vs_expectiminimax.rs  quick_check.rs  quick_matrix_verification.rs  realistic_ai_comparison.rs  reliability_verification.rs
worker/src/: ai-wasm.ts  ai.zig  index.js  index.ts  lib.rs  types.d.ts
(+74 files in other folders)
