[package]
name = "rgou-ai-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Robert Gilks"]
description = "Royal Game of Ur AI engine compiled to WebAssembly"
license = "MIT"
repository = "https://github.com/robertgilks/rgou-cloudflare"
keywords = ["wasm", "game", "ai", "royal-game-ur"]
categories = ["wasm", "games"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wee_alloc = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
# Optimize for size.
opt-level = "s"
# Enable link time optimization for smaller binary.
lto = true
