[package]
name = "rgou-ai-worker"
version = "0.1.0"
edition = "2024"
authors = ["Robert Gilks"]
description = "Royal Game of Ur AI worker - Pure Rust"
license = "MIT"
repository = "https://github.com/robertgilks/rgou-cloudflare"
keywords = ["cloudflare", "worker", "game", "ai", "royal-game-ur"]
categories = ["wasm", "games", "web-programming"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"

[profile.release]
# Optimize for size and performance
opt-level = "s"
lto = true
codegen-units = 1
