[package]
name = "rgou-ai-worker"
version = "0.1.0"
edition = "2021"
authors = ["Robert Gilks"]
description = "Royal Game of Ur AI worker - Pure Rust"
license = "MIT"
repository = "https://github.com/robertgilks/rgou-cloudflare"
keywords = ["cloudflare", "worker", "game", "ai", "royal-game-ur"]
categories = ["wasm", "games", "web-programming"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
rgou-ai-core = { path = "rust_ai_core", features = ["wasm"] }
wasm-bindgen = "0.2.100"

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Optimize for size and performance
opt-level = "s"
lto = true
codegen-units = 1
