[package]
name = "ml_ai_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
rand_core = "0.6"

# Neural network dependencies
ndarray = "0.15"
ndarray-rand = "0.14"

[features]
default = []
wasm = ["getrandom/js"]
