[package]
name = "rgou-ai-core"
version = "0.1.0"
edition = "2021"
authors = ["Robert Gilks"]
description = "Royal Game of Ur AI core logic"
license = "MIT"
repository = "https://github.com/robertgilks/rgou-cloudflare"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = [
    "wasm-bindgen",
    "console_error_panic_hook",
    "getrandom/js",
    "dep:js-sys",
    "dep:web-sys",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8.5", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2.100", optional = true }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[dev-dependencies]
criterion = "0.6.0"
